--- a/style.css
+++ b/style.css
@@ -1,485 +1,598 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  font-weight: normal;
+  font-size: 30px;
+  text-align: center;
+  color: black;
+  line-height: 20px;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .center {
-    padding-left: calc(50% - 570px);
-    padding-right: calc(50% - 570px);
+  padding-left: calc(50% - 570px);
+  padding-right: calc(50% - 570px);
 }
 
 .header {
-    height: 75px;
-    background: #222222;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  height: 75px;
+  background: #222222;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.header__left {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+.header__left, .header__right {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
 }
-
 .header__right {
-    display: flex;
-    align-items: center;
-    gap: 32px;
+  gap: 32px;
 }
 
 .top {
-    padding-left: calc(50% - 800px);
-    padding-right: calc(50% - 800px);
-    background: #F1E4E6;
-    display: flex;
+  padding-left: calc(50% - 800px);
+  padding-right: calc(50% - 800px);
+  background: #F1E4E6;
+  display: flex;
 }
-
-.top__left {
-    width: 50%;
+.top__left, .top__right {
+  width: 50%;
 }
-
 .top__right {
-    width: 50%;
-    padding-left: 64px;
-    box-sizing: border-box;
+  padding-left: 64px;
+  box-sizing: border-box;
 }
-
 .top__content {
-    margin-top: 40%;
-    border-left: 12px solid #F16D7F;
-    padding-left: 16px;
+  margin-top: 40%;
+  border-left: 12px solid #F16D7F;
+  padding-left: 16px;
 }
-
 .top__heading {
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
 }
-
 .top__heading__mini {
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .spanned__text {
-    color: #F16D7F;
+  color: #F16D7F;
 }
 
 .menu-icon {
-    position: relative;
+  position: relative;
 }
 
 .dropdown__container {
-    width: 232px;
-    background: #FFF;
-    display: none;
-    position: absolute;
-    z-index: 999;
-    top: 51px;
-    left: 0;
-    filter: drop-shadow(6px 4px 35px rgba(0, 0, 0, 0.21));
-    padding-bottom: 24px;
+  width: 232px;
+  background: #FFF;
+  display: none;
+  position: absolute;
+  z-index: 999;
+  top: 51px;
+  left: 0;
+  filter: drop-shadow(6px 4px 35px rgba(0, 0, 0, 0.21));
+  padding-bottom: 24px;
 }
 
 .header__right > div, svg {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.menu-icon:hover .dropdown__container{
-    display: block;
+.menu-icon:hover .dropdown__container {
+  display: block;
 }
 
 .text-ml-34 {
-    margin-left: 34px;
+  margin-left: 34px;
 }
 
 .menu__title {
-    color: #000;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    padding: 37px 143px 4px 0;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 37px 143px 4px 0;
 }
 
 .menu__block {
-    margin-top: 20px;
-    margin-left: 34px;
+  margin-top: 20px;
+  margin-left: 34px;
 }
 
 .menu__block li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .menu__section > .title {
-    color: #F16D7F;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #F16D7F;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .menu__section > .group > li {
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding: 12px 0 0 20px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 12px 0 0 20px;
 }
 
 .menu__section > .group > li > a {
-    color: #6F6E6E;
+  color: #6F6E6E;
 }
 
 .sale {
-    padding-top: 64px;
+  padding-top: 64px;
 }
-
 .sale__content {
-    display: flex;
-    gap: 30px;
-    margin-bottom: 30px;
+  display: flex;
+  gap: 30px;
+  margin-bottom: 30px;
 }
-
 .sale__item {
-    position: relative;
+  position: relative;
 }
-
+.sale__item:hover .sale__heading {
+  color: #e21632;
+}
+.sale__img {
+  width: 360px;
+}
+.sale__img__big {
+  width: 1140px;
+}
 .sale__text {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
 .sale__p {
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color:#FFFFFF
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #FFFFFF;
 }
-
 .sale__heading {
-    color: #F16D7F;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 29px;
-    text-align: center;
+  color: #F16D7F;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 29px;
+  text-align: center;
 }
 
 .tac {
-    text-align: center;
+  text-align: center;
 }
 
 .heading {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 30px;
-    line-height: 36px;
-    color: #222222;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 36px;
+  color: #222222;
 }
 
 .text {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #9F9F9F;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #9F9F9F;
 }
 
 .text-mt-6 {
-    margin-top: 6px;
+  margin-top: 6px;
 }
 
 .product-box {
-    padding-top: 96px;
-    padding-bottom: 124px;
+  padding-top: 96px;
+  padding-bottom: 124px;
 }
 
 .product-content {
-    margin-top: 48px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
+  margin-top: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
 }
 
 .product {
-    width: 360px;
-    background: #F8F8F8;
-    position: relative;
+  width: 360px;
+  background: #F8F8F8;
+  position: relative;
+}
+.product__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 24px 16px;
+  gap: 16px;
+}
+.product__img {
+  width: 100%;
+}
+.product__add {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #FFFFFF;
+  width: 139px;
+  height: 44px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  gap: 11px;
+  border: 1px solid #FFFFFF;
+  position: absolute;
+  top: 188px;
+  left: 111px;
+}
+.product__heading {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+}
+.product__add:hover {
+  color: #222222;
+  background-color: #FFFFFF;
+}
+.product__add:hover path {
+  fill: #222222;
+}
+.product__text {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #5D5D5D;
+}
+.product__price {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #F16D7F;
 }
 
 .product:hover .product__add {
-    display: flex;
+  display: flex;
 }
 
 .product:hover .product__img {
-    filter: brightness(50%);
-}
-
-.product__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 24px 16px;
-    gap: 16px;
-}
-
-.product__add {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #FFFFFF;
-    width: 139px;
-    height: 44px;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    gap: 11px;
-    border: 1px solid #FFFFFF;
-    position: absolute;
-    top: 188px;
-    left: 111px;
-}
-
-.product__heading {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 16px;
-    color: #000000;
-}
-
-.product__add:hover {
-    color: #222222;
-    background-color: #FFFFFF;
-}
-
-.product__add:hover path {
-    fill: #222222;
-}
-.product__text {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 17px;
-    color: #5D5D5D;
-}
-
-.product__price {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #F16D7F;
+  filter: brightness(50%);
 }
 
 .browse-button {
-    text-align: center;
-    padding-top: 48px;
+  text-align: center;
+  padding-top: 48px;
 }
-
 .browse-button__span {
-    border: solid #FF6A6A;
-    padding: 15px 40px;
-    color: #F26376;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  border: solid #FF6A6A;
+  padding: 15px 40px;
+  color: #F26376;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-
 .browse-button__span:hover {
-    background-color: #F16D7F;
-    color: #FFF;
+  background-color: #F16D7F;
+  color: #FFF;
 }
 
 .advantages__container {
-    background: #222224;
-    display: flex;
-
+  background: #222224;
+  display: flex;
 }
 
 .advantages__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 104px 0;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 104px 0;
 }
 
 .advantage__title {
-    color: #FBFBFB;
-    text-align: center;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-top: 28px;
-    margin-bottom: 16px;
+  color: #FBFBFB;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 28px;
+  margin-bottom: 16px;
 }
 
 .advantage__desc {
-    color: #FBFBFB;
-    text-align: center;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    max-width: 360px;
+  color: #FBFBFB;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  max-width: 360px;
 }
 
 .subscribe__container {
-    display: flex;
-    justify-content: space-around;
-    background-image: url("img/photo_subscribe.jpeg");
-    background-color: #cccccc;
-    height: 448px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  display: flex;
+  justify-content: space-around;
+  background-image: url("img/photo_subscribe.jpeg");
+  background-color: #cccccc;
+  height: 448px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .testimonial img {
-    margin-top: 97px;
-    margin-bottom: 30px;
+  margin-top: 97px;
+  margin-bottom: 30px;
 }
 
 .testimonial {
-    max-width: 360px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: normal;
-    text-align: center;
+  max-width: 360px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
 }
 
 .testimonial span {
-    font-style: italic;
+  font-style: italic;
 }
 
 .subscribe-form {
-    max-width: 557px;
+  max-width: 557px;
 }
 
 .subscribe-form__title {
-    margin-top: 150px;
-    margin-bottom: 32px;
-    color: #222224;
-    text-align: center;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 167.2%;
+  margin-top: 150px;
+  margin-bottom: 32px;
+  color: #222224;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 167.2%;
 }
 
 .subscribe-form__title #subtitle {
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 167.2%;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 167.2%;
 }
 
 .email-input {
-    border-radius: 50px 0 0 50px;
-    background: #E1E1E1;
-    border: none;
-    height: 50px;
-    width: 256px;
-    padding: 0 64px 0 22px;
-    box-sizing: border-box;
-    opacity: 0.67;
+  border-radius: 50px 0 0 50px;
+  background: #E1E1E1;
+  border: none;
+  height: 50px;
+  width: 256px;
+  padding: 0 64px 0 22px;
+  box-sizing: border-box;
+  opacity: 0.67;
 }
 
 .form__button {
-    color: #FFF;
-    height: 50px;
-    width: 100px;
-    text-align: center;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    border: none;
-    background: #F16D7F;
-    border-radius: 0 50px 50px 0;
-    padding: 8px;
-    margin-left: -4px;
+  color: #FFF;
+  height: 50px;
+  width: 100px;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border: none;
+  background: #F16D7F;
+  border-radius: 0 50px 50px 0;
+  padding: 8px;
+  margin-left: -4px;
 }
 
 .footer {
-    height: 80px;
-    background: #222224;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  height: 80px;
+  background: #222224;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .copyright {
-    color: #FBFBFB;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-left: 230px;
+  color: #FBFBFB;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 230px;
 }
 
 .social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    margin-right: 230px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-right: 230px;
 }
-
 .social__icon {
-    width: 32px;
-    height: 32px;
-    background: #FFFFFF;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 32px;
+  height: 32px;
+  background: #FFFFFF;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 .social__icon #instagram path {
-    fill: #000000;
+  fill: #000000;
 }
-
 .social__icon:hover {
-    background: #F16D7F;
+  background: #F16D7F;
 }
-
 .social__icon:hover path {
-    fill: #FFFFFF;
+  fill: #FFFFFF;
 }
-
 .social__icon img {
-    width: 60%;
+  width: 60%;
 }
 
+.head {
+  background: #F8F3F4;
+  height: 148px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.head__heading {
+  font-size: 24px;
+  line-height: 29px;
+  color: #F16D7F;
+}
 
+.breadcrumbs__ul {
+  display: flex;
+}
+.breadcrumbs__li {
+  list-style-type: none;
+}
+.breadcrumbs__li:last-of-type .breadcrumbs__link {
+  font-weight: bold;
+  color: #F16D7F;
+}
+.breadcrumbs__li:not(:last-of-type)::after {
+  content: "/";
+  padding-left: 6px;
+  padding-right: 6px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #636363;
+}
+.breadcrumbs__link {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #636363;
+}
+.breadcrumbs__link:hover {
+  color: #F16D7F;
+}
+
+.filter {
+  display: flex;
+  margin-top: 55px;
+}
+.filter__left {
+  margin-left: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+.filter__left:hover p {
+  color: #F16D7F;
+}
+.filter__left:hover .filter__left__icon path {
+  fill: #EF5B70;
+}
+.filter__left__text {
+  padding-right: 11px;
+  color: #000;
+  font-size: 14px;
+  font-weight: 600;
+}
+.filter__right {
+  margin-left: 306px;
+}
+.filter__right__group {
+  display: flex;
+  align-items: center;
+  padding-right: 28px;
+  color: #6F6E6E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.filter__right__group svg {
+  padding-left: 8px;
+}
+.filter__right ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.catalog__p-t-0 {
+  padding-top: 0;
+  padding-bottom: 95px;
+}
+
+.catalog__m-t-64 {
+  margin-top: 64px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  width: auto;
+  padding: 15px;
+  border: solid 1px #EBEBEB;
+}
+
+.row p {
+  padding: 0 15px 0 15px;
+  color: #C4C4C4;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+/*# sourceMappingURL=style.css.map */
