--- a/_vars.sass
+++ b/_vars.sass
@@ -1,5 +1,7 @@
 $colorSite: #F16D7F
 $colorDark: #222222
+$colorLightBg: #F7F7F7
+$colorGray: #EAEAEA
 $widthSite: 1140px
 $gapGrid: 30px
 $contentCol4: ($widthSite - 2 * $gapGrid) / 3
