--- a/_shopping-cart.sass
+++ b/_shopping-cart.sass
@@ -82,7 +82,7 @@
         color: #222
 
     &__input
-        width: $widthShippingForm
+        width: $widthInputField
         height: 45px
         margin-top: 24px
         color: #222
