--- a/_vars.sass
+++ b/_vars.sass
@@ -3,6 +3,6 @@ $colorDark: #222222
 $colorLightBg: #F7F7F7
 $colorGray: #EAEAEA
 $widthSite: 1140px
-$widthShippingForm: 360px
+$widthInputField: 360px
 $gapGrid: 30px
 $contentCol4: ($widthSite - 2 * $gapGrid) / 3
