--- a/style.css
+++ b/style.css
@@ -910,6 +910,86 @@ img {
   cursor: pointer;
 }
 
+.registration {
+  padding-top: 48px;
+  display: flex;
+}
+.registration__column--left {
+  padding-bottom: 76px;
+  box-sizing: border-box;
+}
+.registration__column--right {
+  margin-left: 100px;
+}
+.registration__title {
+  color: #222;
+  font-size: 16px;
+  font-weight: 300;
+}
+.registration__block {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+}
+.registration__block--bottom {
+  padding-top: 24px;
+}
+.registration__input {
+  box-sizing: border-box;
+  margin-top: 20px;
+  width: 100%;
+  border: 1px solid #A4A4A4;
+  padding: 12px 0 12px 16px;
+  color: #B1B1B1;
+  font-size: 13px;
+  font-weight: 300;
+}
+.registration__sex {
+  display: flex;
+  margin-top: 36px;
+  gap: 24px;
+}
+.registration__hint {
+  color: #B1B1B1;
+  font-size: 13px;
+  font-weight: 300;
+  padding-top: 16px;
+}
+.registration__button {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 16px 0 16px 0;
+  background: #F16D7F;
+  max-width: 167px;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+.registration__button:hover {
+  transform: scale(1.05);
+}
+.registration__perks {
+  color: #000;
+  font-size: 24px;
+  font-weight: 300;
+}
+.registration__perks__subtitle {
+  padding-top: 22px;
+  padding-bottom: 5px;
+}
+.registration__perks__bullet {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+  gap: 22px;
+  transition: transform 0.3s;
+}
+.registration__perks__bullet:hover {
+  transform: scale(1.05);
+}
+
 @media (max-width: 1023px) {
   .center {
     padding-left: calc(50% - 368px);
