--- a/_m1023.sass
+++ b/_m1023.sass
@@ -7,3 +7,23 @@
 
     .product-content
         gap: $gapGrid
+
+    .top
+        &__right
+            padding-left: 39px
+        &__heading
+            font-size: 44px
+            line-height: 53px
+            &-mini
+                font-size: 24px
+                line-height: 29px
+
+    .sale__content
+        $gapGrid: 20px
+        gap: $gapGrid
+        margin-bottom: 20px
+
+    // Catalog
+
+    .filter-sort
+        justify-content: space-between
