--- a/_m767.sass
+++ b/_m767.sass
@@ -3,6 +3,26 @@
         padding-left: 16px
         padding-right: 16px
 
+    .header
+        &__link
+            display: none
+
+    .menu
+        top: 0
+        width: 100%
+        &__box
+            margin-bottom: 16px
+            display: flex
+            gap: 32px
+            & path
+                fill: #000000
+        &__heading
+            display: none
+
+    #switcher:checked ~ .menu
+        right: 0
+        top: -100%
+
     .top
         padding-left: 16px
         padding-right: 16px
@@ -19,3 +39,48 @@
 
         &__content
             margin-top: 0
+
+        &__heading
+            font-weight: 900
+            font-size: 38px
+            line-height: 46px
+            color: $colorDark
+            &-mini
+                font-weight: bold
+                font-size: 20px
+                line-height: 24px
+                color: $colorDark
+                &_color
+                    color: $colorSite
+
+    .sale
+        &__content
+            flex-direction: column
+        &__img__big
+            height: 111px
+            object-fit: cover
+
+    // Catalog
+
+    .head
+        justify-content: center
+        gap: 32px
+        flex-direction: column
+        align-items: center
+
+    .sort
+        gap: 23px
+        &__summary
+            gap: 9px
+            font-size: 12px
+            line-height: 14px
+
+    .filter
+        position: absolute
+        width: calc(100% - 32px)
+        &__summary
+            &-text
+                display: none
+        &-sort
+            justify-content: flex-end
+
