--- a/style.css
+++ b/style.css
@@ -44,6 +44,74 @@ img {
   gap: 32px;
 }
 
+.wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.menu {
+  position: absolute;
+  top: 75px;
+  right: 0;
+  background: #FFFFFF;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  padding: 32px;
+  width: 232px;
+  box-sizing: border-box;
+  transition: all 0.5s;
+  z-index: 100;
+}
+.menu__ul {
+  list-style-type: none;
+}
+.menu__heading {
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  margin-bottom: 4px;
+}
+.menu__link-heading {
+  font-size: 14px;
+  line-height: 17px;
+  color: #F16D7F;
+  text-transform: uppercase;
+}
+.menu__li {
+  margin-top: 20px;
+}
+.menu__content-links {
+  display: flex;
+  flex-direction: column;
+  margin-left: 22px;
+  gap: 11px;
+  margin-top: 12px;
+}
+.menu__link {
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+}
+.menu__link:hover {
+  color: #F16D7F;
+}
+.menu__close {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+.menu__box {
+  display: none;
+}
+
+#switcher {
+  position: absolute;
+  visibility: hidden;
+  left: -999999px;
+}
+#switcher:checked ~ .menu {
+  right: -100%;
+}
+
 .top {
   padding-left: calc(50% - 800px);
   padding-right: calc(50% - 800px);
@@ -79,10 +147,6 @@ img {
   color: #F16D7F;
 }
 
-.menu-icon {
-  position: relative;
-}
-
 .dropdown__container {
   width: 232px;
   background: #FFF;
@@ -105,44 +169,6 @@ img {
 
 .text-ml-34 {
   margin-left: 34px;
-}
-
-.menu__title {
-  color: #000;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  padding: 37px 143px 4px 0;
-}
-
-.menu__block {
-  margin-top: 20px;
-  margin-left: 34px;
-}
-
-.menu__block li {
-  list-style-type: none;
-}
-
-.menu__section > .title {
-  color: #F16D7F;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.menu__section > .group > li {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  padding: 12px 0 0 20px;
-}
-
-.menu__section > .group > li > a {
-  color: #6F6E6E;
 }
 
 .sale {
@@ -216,7 +242,7 @@ img {
 
 .product-box {
   padding-top: 96px;
-  padding-bottom: 124px;
+  padding-bottom: 96px;
 }
 
 .product-content {
@@ -507,6 +533,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .head__heading {
   font-size: 24px;
@@ -998,11 +1025,51 @@ img {
   .product-content {
     gap: 16px;
   }
+  .top__right {
+    padding-left: 39px;
+  }
+  .top__heading {
+    font-size: 44px;
+    line-height: 53px;
+  }
+  .top__heading-mini {
+    font-size: 24px;
+    line-height: 29px;
+  }
+  .sale__content {
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+  .filter-sort {
+    justify-content: space-between;
+  }
 }
 @media (max-width: 767px) {
   .center {
     padding-left: 16px;
     padding-right: 16px;
+  }
+  .header__link {
+    display: none;
+  }
+  .menu {
+    top: 0;
+    width: 100%;
+  }
+  .menu__box {
+    margin-bottom: 16px;
+    display: flex;
+    gap: 32px;
+  }
+  .menu__box path {
+    fill: #000000;
+  }
+  .menu__heading {
+    display: none;
+  }
+  #switcher:checked ~ .menu {
+    right: 0;
+    top: -100%;
   }
   .top {
     padding-left: 16px;
@@ -1020,6 +1087,52 @@ img {
   }
   .top__content {
     margin-top: 0;
+  }
+  .top__heading {
+    font-weight: 900;
+    font-size: 38px;
+    line-height: 46px;
+    color: #222222;
+  }
+  .top__heading-mini {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    color: #222222;
+  }
+  .top__heading-mini_color {
+    color: #F16D7F;
+  }
+  .sale__content {
+    flex-direction: column;
+  }
+  .sale__img__big {
+    height: 111px;
+    object-fit: cover;
+  }
+  .head {
+    justify-content: center;
+    gap: 32px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .sort {
+    gap: 23px;
+  }
+  .sort__summary {
+    gap: 9px;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .filter {
+    position: absolute;
+    width: calc(100% - 32px);
+  }
+  .filter__summary-text {
+    display: none;
+  }
+  .filter-sort {
+    justify-content: flex-end;
   }
 }
 
