index.html adaptive

--- a/_m1023.sass
+++ b/_m1023.sass
@@ -23,6 +23,29 @@
         gap: $gapGrid
         margin-bottom: 20px
 
+    .advantages
+        &__container
+            display: flex
+            flex-direction: column
+        &__item
+            padding-top: 48px
+            padding-bottom: 0
+
+    .advantages__item:last-child
+        margin-bottom: 64px
+
+    .subscribe
+        &__container
+            flex-direction: column
+            background-size: cover
+        &-form
+            margin-bottom: 140px
+            margin-right: 0
+
+    .testimonial
+        margin-top: 64px
+        margin-bottom: 48px
+
     // Catalog
 
     .filter-sort
