--- a/_m767.sass
+++ b/_m767.sass
@@ -60,6 +60,23 @@
             height: 111px
             object-fit: cover
 
+    .testimonial
+        font-size: 18px
+
+    .subscribe-form__title #subtitle
+        font-size: 14px
+
+    .footer
+        flex-direction: column-reverse
+        justify-content: normal
+
+    .copyright
+        margin-top: 40px
+        margin-bottom: 8px
+
+    .social
+        margin: 40px 0 0 0
+
     // Catalog
 
     .head
