--- a/style.css
+++ b/style.css
@@ -377,17 +377,16 @@ img {
 
 .subscribe__container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   background-image: url("img/photo_subscribe.jpeg");
   background-color: #cccccc;
-  height: 448px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .testimonial img {
-  margin-top: 97px;
   margin-bottom: 30px;
 }
 
@@ -395,8 +394,9 @@ img {
   max-width: 360px;
   font-size: 20px;
   font-weight: 400;
-  line-height: normal;
   text-align: center;
+  margin-top: 96px;
+  margin-bottom: 126px;
 }
 
 .testimonial span {
@@ -405,10 +405,10 @@ img {
 
 .subscribe-form {
   max-width: 557px;
+  margin-right: 80px;
 }
 
 .subscribe-form__title {
-  margin-top: 150px;
   margin-bottom: 32px;
   color: #222224;
   text-align: center;
@@ -433,7 +433,6 @@ img {
   width: 256px;
   padding: 0 64px 0 22px;
   box-sizing: border-box;
-  opacity: 0.67;
 }
 
 .form__button {
@@ -453,7 +452,6 @@ img {
 }
 
 .footer {
-  height: 80px;
   background: #222224;
   display: flex;
   justify-content: space-between;
@@ -466,7 +464,6 @@ img {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-left: 230px;
 }
 
 .social {
@@ -474,7 +471,7 @@ img {
   justify-content: center;
   align-items: center;
   gap: 8px;
-  margin-right: 230px;
+  margin: 24px 0;
 }
 .social__icon {
   width: 32px;
@@ -1040,6 +1037,29 @@ img {
     gap: 20px;
     margin-bottom: 20px;
   }
+  .advantages__container {
+    display: flex;
+    flex-direction: column;
+  }
+  .advantages__item {
+    padding-top: 48px;
+    padding-bottom: 0;
+  }
+  .advantages__item:last-child {
+    margin-bottom: 64px;
+  }
+  .subscribe__container {
+    flex-direction: column;
+    background-size: cover;
+  }
+  .subscribe-form {
+    margin-bottom: 140px;
+    margin-right: 0;
+  }
+  .testimonial {
+    margin-top: 64px;
+    margin-bottom: 48px;
+  }
   .filter-sort {
     justify-content: space-between;
   }
@@ -1109,6 +1129,23 @@ img {
   .sale__img__big {
     height: 111px;
     object-fit: cover;
+  }
+  .testimonial {
+    font-size: 18px;
+  }
+  .subscribe-form__title #subtitle {
+    font-size: 14px;
+  }
+  .footer {
+    flex-direction: column-reverse;
+    justify-content: normal;
+  }
+  .copyright {
+    margin-top: 40px;
+    margin-bottom: 8px;
+  }
+  .social {
+    margin: 40px 0 0 0;
   }
   .head {
     justify-content: center;
