--- a/style.sass
+++ b/style.sass
@@ -376,33 +376,33 @@ img
 
 .subscribe__container
     display: flex
-    justify-content: space-around
+    justify-content: space-between
+    align-items: center
     background-image: url("img/photo_subscribe.jpeg")
     background-color: #cccccc
-    height: 448px
     background-position: center
     background-repeat: no-repeat
     background-size: cover
 
 .testimonial img
-    margin-top: 97px
     margin-bottom: 30px
 
 .testimonial
     max-width: 360px
     font-size: 20px
     font-weight: 400
-    line-height: normal
     text-align: center
+    margin-top: 96px
+    margin-bottom: 126px
 
 .testimonial span
     font-style: italic
 
 .subscribe-form
     max-width: 557px
+    margin-right: 80px
 
 .subscribe-form__title
-    margin-top: 150px
     margin-bottom: 32px
     color: #222224
     text-align: center
@@ -425,7 +425,6 @@ img
     width: 256px
     padding: 0 64px 0 22px
     box-sizing: border-box
-    opacity: 0.67
 
 .form__button
     color: #FFF
@@ -443,7 +442,6 @@ img
     margin-left: -4px
 
 .footer
-    height: 80px
     background: #222224
     display: flex
     justify-content: space-between
@@ -455,14 +453,13 @@ img
     font-style: normal
     font-weight: 400
     line-height: normal
-    margin-left: 230px
 
 .social
     display: flex
     justify-content: center
     align-items: center
     gap: 8px
-    margin-right: 230px
+    margin: 24px 0
 
     &__icon
         width: 32px
