catalog.html adaptive

--- a/_catalog.sass
+++ b/_catalog.sass
@@ -66,6 +66,9 @@
         display: flex
         align-items: center
         gap: 11px
+        color: #000
+        font-size: 14px
+        font-weight: 600
 
     &__details-in
         padding-top: 16px
@@ -92,6 +95,18 @@
         color: #6F6E6E
         &:hover
             color: $colorSite
+
+.sort
+    &__summary
+        color: #6F6E6E
+        font-size: 14px
+        font-weight: 400
+
+.product-box-catalog
+    padding-top: 0
+
+.product-content-catalog
+    margin-top: 0
 
 .catalog__p-t-0
     padding-top: 0
