--- a/_m767.sass
+++ b/_m767.sass
@@ -98,6 +98,9 @@
         &__summary
             &-text
                 display: none
+            &-icon
+                width: 37.5px
+                height: 25px
         &-sort
             justify-content: flex-end
 
