product.html adaptive

--- a/_m1023.sass
+++ b/_m1023.sass
@@ -52,3 +52,10 @@
         justify-content: space-between
         padding-top: 12px
         padding-bottom: 40px
+
+    // Product
+
+    .about-product
+        &__description
+            padding: 0 106px
+
