--- a/_m767.sass
+++ b/_m767.sass
@@ -104,3 +104,22 @@
         &-sort
             justify-content: flex-end
 
+    // Product
+
+    .about-product
+        &__product
+            padding-bottom: 32px
+        &__description
+            max-width: 326px
+            padding: 0 24px
+
+    .divider--gray
+        width: 175px
+        margin: 32px 0 40px 0
+
+    .sort__summary
+        font-size: 10px
+
+    .product-box
+        padding-top: 28px
+
