--- a/_product.sass
+++ b/_product.sass
@@ -79,10 +79,18 @@
         color: #FFFFFF
 
 .divider--red
-    padding: 12px 0
+    margin: 12px 0
+    width: 64px
+    height: 3px
+    background: #EF5B70
+    border: none
 
 .divider--gray
-    padding: 64px 0
+    margin: 64px 0
+    width: 640px
+    height: 1px
+    background: #EAEAEA
+    border: none
 
 .padding-top
     padding-top: 0
