registration.html adaptive

--- a/_m1023.sass
+++ b/_m1023.sass
@@ -59,3 +59,12 @@
         &__description
             padding: 0 106px
 
+    // Registration
+    .registration
+        &__column--right
+            max-width: 354px
+            padding-left: 22px
+        &__perks
+            font-size: 16px
+
+
