--- a/_registration.sass
+++ b/_registration.sass
@@ -4,12 +4,12 @@
 
     &__column
         &--left
-
             padding-bottom: 76px
             box-sizing: border-box
 
         &--right
-            margin-left: 100px
+            padding-left: 128px
+            box-sizing: border-box
 
     &__title
         color: #222
@@ -19,7 +19,6 @@
     &__block
         display: flex
         flex-direction: column
-        width: 360px
         &--bottom
             padding-top: 24px
 
