--- a/_m767.sass
+++ b/_m767.sass
@@ -123,3 +123,14 @@
     .product-box
         padding-top: 28px
 
+    // Registration
+
+    .registration
+        flex-direction: column
+        &__column--left
+            padding-bottom: 40px
+        &__column--right
+            margin: 0
+            padding-bottom: 100px
+        &__perks__subtitle
+            padding-top: 32px
